# roubaix

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.codex/: config.toml
app/api/: main.py
app/core/: config.py  logging.py
app/domain/: models.py
app/integrations/: adalflow_controller.py  cognee_client.py  dspy_program.py  gepa_optimizer.py
app/nexus_services/: evidence_service.py  quality_service.py  synthesis_service.py
app/observability/: metrics.py
app/services/: cache.py  evidence.py  normalizer.py  orchestrator.py  router.py  runtime_controller.py
app/workers/: router_worker.py
app/workflows/: router_workflow.py
configs/: router-policy.md
docs/: architecture.md  evaluation-plan.md  implementation-plan.md  overview.md
docs/adr/: ADR-001-cognee-centered-architecture.md
scripts/: bootstrap.sh  build_demo_video.py  demo_narration.txt
static/: demo.html
tests/: test_cache.py  test_demo_page.py  test_evidence.py  test_normalizer.py  test_orchestrator_cache.py  test_router.py
