[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roubaix"
version = "0.1.0"
description = "Cognee-centered graph retrieval experiment with DSPy/GEPA and AdalFlow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "httpx>=0.27.0",
  "structlog>=24.4.0",
  "tenacity>=9.0.0",
  "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]
opt = [
  "dspy>=2.6.0",
  "adalflow>=0.6.0",
  "cognee>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
